Fix alignment and font size tabs settings

--- a/public/css/sass/components/settingsPanel/MachineTranslationTab.scss
+++ b/public/css/sass/components/settingsPanel/MachineTranslationTab.scss
@@ -572,7 +572,7 @@
 
   h4 {
     margin-bottom: 5px;
-    font-size: 14px;
+    font-size: 16px;
   }
 
   p {
@@ -632,7 +632,7 @@
       display: flex;
       gap: 40px;
       align-items: center;
-      padding: 8px 0;
+      padding: 10px 0;
       text-align: left;
 
       h3 {
@@ -640,7 +640,7 @@
       }
 
       p {
-        font-size: 14px;
+        font-size: 16px;
       }
 
       > :first-child {
