--- a/public/css/sass/components/settingsPanel/SettingsPanelTable.scss
+++ b/public/css/sass/components/settingsPanel/SettingsPanelTable.scss
@@ -152,5 +152,5 @@
 
 .settings-panel-mt-row-description {
   padding: 5px 10px !important;
-  font-size: 12px;
+  font-size: 14px;
 }
